@@ -56,7 +56,8 @@ Changes in version 1.7-0
   * summary.purtest: give informative error message when run on purtest object
     containing result for Hadri's test.
   * pggls models: display proper names in summary's topline.
-  * pcce models: display proper names in summary's topline.
+  * pcce models: display proper names in summary's topline; pooled model object's
+    element 'coefficients' is a numeric (was 1x1 matrix).
 
   * Addenum: In plm version 1.6-6, aneweytest() was changed to use the residuals
     of the one-way individual within model (was: two-ways within model).
